criancao do perfil e estilo css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
 <body>
-    <script src="assets/main.js"></script>
+    <main>
+        <script src="assets/main.js"></script>
+        <h1>perfil</h1>
+            <span> sou uma desenvolvedora fuul-stack</span>
+    <figure> 
+        <img src="assets/fotodeperfil.jpg" alt="foto da pietra">
+    </figure>   
+        <article class="sobre-mim">
+        <h2> sobre mim</h2>
+        <p> me chamo pietra nasci em bariri dia 16 do junho de 2007,   
+        <p> tenho 3 irmaos, gosto de ler, assistir serie, dormir,</p>
+        <p> jogar volei. </p>
+        <p> andar de bicicleta, dancar, escutar musica,</p>
+        <p> sair com meus amigos, ir para igreja aos domingos</p>
+        <p>amo assistir casos de serial killer</p>
+        <p> estou no sgundo ano do ensino medio do sesi 143 briri</p>
+        </article>
+        <article class="detalhes">
+        <h2> detalhes</h2>
+        <span><strong> nome:</strong></span>
+        <span>Pietra Santos</span>
+        <p> </p>
+        <sapan><strong>idade</strong></sapan>
+        <span>16 anos</span>
+        <p> </p>
+        <span><strong>localizaçâo</strong></span>
+        <span>bariri sp</span>
+            <p> </p>
+        <span><strong> contato</strong></span> 
+        <span> 997081600</span> 
+        <span>pietrinhagoncalves16@gmail.com</span>
+        </article>
+        <button onclick="mudacor()">modificar</button>
+    </main>
 </body>
 </html>
