--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2> sobre mim</h2>
         <p> me chamo pietra nasci em bariri dia 16 do junho de 2007,   
         <p> tenho 3 irmaos, gosto de ler, assistir serie, dormir,</p>
-        <p> jogar volei. </p>
+        <p> jogar volei passar o dia com a familia.</p>
         <p> andar de bicicleta, dancar, escutar musica,</p>
         <p> sair com meus amigos, ir para igreja aos domingos</p>
         <p>amo assistir casos de serial killer</p>
@@ -39,7 +39,7 @@
         <span> 997081600</span> 
         <span>pietrinhagoncalves16@gmail.com</span>
         </article>
-        <button onclick="mudacor()">modificar</button>
+        <button class="btn" onclick="mudacor()">modificar</button>
     </main>
 </body>
 </html>
